- Added option to invert the rule condition (match/match not)
- Added product list caching with intelligent self-configuration to display a "please wait" message only when necessary
- Added caching tables to the maintenance cleaing options
- Added .html5 & .xhtml templates for Contao 2.10 (Ticket #457)
- Added checkout stepcount classes (Ticket #491)
- Improved: Allow subclasses of ModuleIsotopeProductFilter for filter modules
- Improved: Allow subclasses of ModuleIsotopeProductFilter to cache request
- Improved: new function generateRequestUrl to remove GET-parameters from request string
- Improved backend product list, no more "limit" option but can search & filter through all products and variants and translations (Ticket #495)
- Improved error logging in postsale script (Ticket #390)
- Fixed a bug in runonce script preventing the database file from being refreshed
- Fixed a bug with Contao 2.10 and the new foreignKey implementation
- Fixed product translations not working (Ticket #448)
- Fixed quotes in "remove from cart" title (Ticket #478)
- Started using static functions if they don't need the class (see IsotopeFrontend)

Version 1.3.beta1 (2011-07-18)
------------------------------
- Added: "advanced prices". Allow to define a prices for store configs, member groups, start/stop dates
- Added: availability check for products
- Added: new "field wizard" to set up address fields with custom label and mandatory option in store configuration
- Added: option the define a custom template folder for each store configuration
- Added: store config option to limit tl_member countries to billing and shipping countries
- Added: new IsotopeOrder class, checkout can now be done from postsale request
- Added: button to duplicate the fallback language to a language record
- Added: multi-edit support for products and variant data
- Added: minimum order subtotal amount (store config option)
- Added: sku to email product template
- Added: iso_checkout_order_conditions template