@@ -13,7 +13,7 @@
 <div class="clear">&nbsp;</div>
 <table>
 <tfoot>
-	<tr class="subtotal foot_first">
+	<tr class="foot_0 foot_first subtotal">
 		<td class="col_first">&nbsp;</td>
 		<td class="name" colspan="2"><?php echo $this->subTotalLabel; ?></td>
 		<td class="price">&nbsp;</td>
@@ -29,7 +29,7 @@
 		<td class="col_last tax"><?php echo $surcharge['tax_id']; ?></td>
 	</tr>
 <?php endforeach; ?>
-	<tr class="grandtotal foot_last">
+	<tr class="foot_<?php echo count($this->surcharges)+1; ?> foot_last grandtotal">
 		<td class="col_first">&nbsp;</td>
 		<td class="name" colspan="2"><?php echo $this->grandTotalLabel; ?></td>
 		<td class="price total" colspan="2"><?php echo $this->grandTotalPrice; ?></td>
