@@ -14,6 +14,7 @@ Version 1.3.beta2 (2011-??-??)
 - Added caching tables to the maintenance cleaing options
 - Added .html5 & .xhtml templates for Contao 2.10 (Ticket #457)
 - Added checkout stepcount classes (Ticket #491)
+- Added consistent surcharge classes to cart, checkout and order details (Ticket #494)
 - Improved: Allow subclasses of ModuleIsotopeProductFilter for filter modules
 - Improved: Allow subclasses of ModuleIsotopeProductFilter to cache request
 - Improved: new function generateRequestUrl to remove GET-parameters from request string
